# topos

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml
agent/: Dockerfile
apps/web/src/lib/react/components/ui/: logo.tsx
docs/: ARCHITECTURE.md  BEYOND_SEARCH.md
strata/: .env.example  Dockerfile  alembic.ini  pyproject.toml
strata/alembic/: env.py
strata/alembic/versions/: 001_initial_schema.py  002_semantic_features.py
strata/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
strata/app/api/: admin.py  ingest.py  query.py
strata/app/services/: classification.py  exposure.py  extraction.py  observability.py  policy_engine.py  semantic_diff.py  semantic_extraction.py  sensitivity.py
strata/app/workers/: base.py  enrichment.py  extraction.py  runner.py  semantics.py
strata_agent/: Dockerfile  config.example.yaml  pyproject.toml
strata_agent/strata_agent/: client.py  config.py  main.py  scanner.py
